set width, use align-self to prevent height from growing
Fixes #14

--- a/client/sm/embed/events/listing.scss
+++ b/client/sm/embed/events/listing.scss
@@ -26,12 +26,8 @@
         display: flex;
 
         .image {
+            align-self: center;
             max-width: 240px;
-            img {
-                height: 100%;
-                width: 100%;
-                object-fit: contain;
-            }
         }
         .info {
             margin: 0 10px;
